Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4319

mysqlbinlog output ambiguous escaping

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 10.0.1, 5.5.30
    • 10.0.2, 5.5.31
    • None
    • N/A

    Description

      With row-level binlogs enabled, the following command can produce ambiguously escaped output:

      $ mysqlbinlog -v --base64-output=DECODE-ROWS master-bin.000001

      To reproduce the issue, I can run the following SQL command (table schema not relevant):

      INSERT INTO `mytest`.`tbl` VALUES ('\n test \\x0a');

      This results in the mysqlbinlog output:

      ### INSERT INTO `mytest`.`tbl`
      ### SET
      ###   @1='\x0a test \x0a'

      As you can see, it is impossible to differentiate the output of a new-line character (0x0A) from the un-escaped string "\x0a".

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              icgood Ian Good
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: