Patch by Ian Good for MDEV-4319: mysqlbinlog output ambiguous escaping

The output of mysqlbinlog (with "-v --base64-output=DECODE-ROWS" flags) can not always be read or parsed correctly
when string columns contain single-quotes or backslash characters.

The fix for this bug is to escape single-quote and backslash characters on output, so that the result is both more
readable and more easily parse-able.

Note that this is just for comments, so it doesn't affect the replication.

sql/log_event.cc:
  Escape \ and ' properly for mysqlbin user comments.